--- a/index.html
+++ b/index.html
@@ -364,6 +364,24 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-form">
+                <form class="form">
+                    <h2 class="footer-form-title">
+                        Підпишіться на розсилку
+                    </h2>
+                    <div class="footer-form-wrap">
+                        <label class="footer-form-label" for="">
+                            <input class="footer-form-input" type="email" placeholder="E-mail">
+                        </label>
+                        <button class="footer-form-btn">
+                            Підписатися
+                            <svg class="footer-form-icon">
+                                <use href="./img/symbol-defs.svg#icon-telegram"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </footer>
 </body>
