--- a/portfolio.html
+++ b/portfolio.html
@@ -250,18 +250,21 @@
                     <h2 class="footer-form-title">
                         Підпишіться на розсилку
                     </h2>
-                    <label class="footer-form-label" for="">
-                        <input class="footer-form-input" type="email" placeholder="E-mail">
-                    </label>
-                    <button class="footer-form-btn">
-                        Підписатися
-                        <svg class="footer-form-icon">
-                            <use href="./img/symbol-defs.svg#icon-telegram"></use>
-                        </svg>
-                    </button>
+                    <div class="footer-form-wrap">
+                        <label class="footer-form-label" for="">
+                            <input class="footer-form-input" type="email" placeholder="E-mail">
+                        </label>
+                        <button class="footer-form-btn">
+                            Підписатися
+                            <svg class="footer-form-icon">
+                                <use href="./img/symbol-defs.svg#icon-telegram"></use>
+                            </svg>
+                        </button>
+                    </div>
                 </form>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
